force-app/main/default/objects/TriggerWorkflow__mdt/TriggerWorkflow__mdt.object-meta.xml
<CustomObject>
    <description>Enumeration of trigger workflow implementations, used for turning workflows on and off via configuration instead of with deployments</description>
    <label>Trigger Workflow</label>
    <pluralLabel>Trigger Workflows</pluralLabel>
</CustomObject>