force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the workflow should be evaluated. This overrides any entry criteria or any code in the workflow implementation, and every workflow implementation must have a corresponding Trigger Workflow record.</description>
    <inlineHelpText>Whether the workflow should be evaluated</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>