force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsOnAfter__c.field-meta.xml
<CustomField>
    <fullName>IsOnAfter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the workflow should execute in "after" contexts</description>
    <inlineHelpText>Whether the workflow should execute in "after" contexts</inlineHelpText>
    <label>On After</label>
    <type>Checkbox</type>
</CustomField>