force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsOnBefore__c.field-meta.xml
<CustomField>
    <fullName>IsOnBefore__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the workflow should execute in "before" contexts</description>
    <inlineHelpText>Whether the workflow should execute in "before" contexts</inlineHelpText>
    <label>On Before</label>
    <type>Checkbox</type>
</CustomField>