force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsOnDelete__c.field-meta.xml
<CustomField>
    <fullName>IsOnDelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the workflow should execute in "delete" contexts</description>
    <inlineHelpText>Whether the workflow should execute in "delete" contexts</inlineHelpText>
    <label>On Delete</label>
    <type>Checkbox</type>
</CustomField>