force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsOnInsert__c.field-meta.xml
<CustomField>
    <fullName>IsOnInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the workflow should execute in "insert" contexts</description>
    <inlineHelpText>Whether the workflow should execute in "insert" contexts</inlineHelpText>
    <label>On Insert</label>
    <type>Checkbox</type>
</CustomField>