force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsOnUndelete__c.field-meta.xml
<CustomField>
    <fullName>IsOnUndelete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the workflow should execute in "undelete" contexts</description>
    <inlineHelpText>Whether the workflow should execute in "undelete" contexts</inlineHelpText>
    <label>On Undelete</label>
    <type>Checkbox</type>
</CustomField>