force-app/main/default/objects/TriggerWorkflow__mdt/fields/IsOnUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsOnUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether the workflow should execute in "update" contexts</description>
    <inlineHelpText>Whether the workflow should execute in "update" contexts</inlineHelpText>
    <label>On Update</label>
    <type>Checkbox</type>
</CustomField>