force-app/main/default/objects/TriggerWorkflow__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <defaultValue>100</defaultValue>
    <description>The relative priority of a workflow in the context of other workflows for the same object. Multiple workflows may have the same priority if the order of operations is not important.</description>
    <inlineHelpText>The relative priority of a workflow in the context of other workflows for the same object. Multiple workflows may have the same priority if the order of operations is not important.</inlineHelpText>
    <label>Priority</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>