force-app/main/default/objects/TriggerWorkflow__mdt/fields/SobjectName__c.field-meta.xml
<CustomField>
    <fullName>SobjectName__c</fullName>
    <description>The full API name of the object for which this workflow is executed. This is used primarily as a filter when querying metadata to look for active workflows.</description>
    <inlineHelpText>The full API name (e.g., &quot;Account&quot;, &quot;SBQQ__Quote__c&quot;) of the object for which this workflow is executed</inlineHelpText>
    <label>Object API Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>