force-app/main/default/objects/TriggerWorkflow__mdt/listViews/AllActive.listView-meta.xml
<ListView>
    <fullName>AllActive</fullName>
    <columns>DeveloperName</columns>
    <columns>IsActive__c</columns>
    <columns>SobjectName__c</columns>
    <columns>Priority__c</columns>
    <columns>IsOnInsert__c</columns>
    <columns>IsOnUpdate__c</columns>
    <columns>IsOnDelete__c</columns>
    <columns>IsOnBefore__c</columns>
    <columns>IsOnAfter__c</columns>
    <columns>IsOnUndelete__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Active</label>
</ListView>