force-app/main/default/objects/TriggerWorkflow__mdt/listViews/AllInctive.listView-meta.xml
<ListView>
    <fullName>AllInctive</fullName>
    <columns>DeveloperName</columns>
    <columns>IsActive__c</columns>
    <columns>SobjectName__c</columns>
    <columns>Priority__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsActive__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive</label>
</ListView>